--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Application</string>
+    <string name="hello">Hello</string>
+    <string name="view_1">View 1</string>
 </resources>
